Finished majority of layout issues.

--- a/css/index.css
+++ b/css/index.css
@@ -75,16 +75,20 @@ h1, h2, h3, h4, h5 {
 
 header {
   display: flex;
+  /* justify-content: space-between; */
+  align-items: center;
 }
 
 .style-nav {
 	display: flex;
-	justify-content: space-around;
+  width: 100%;
 	padding: 20px;
 }
 
 .style-nav a {
-	padding-top: 10px;
+  justify-content: space-around;
+  width: 100%;
+  padding-top: 10px;
 	text-decoration: none;
 	color: #B8B8B8;
 }
@@ -206,6 +210,7 @@ address {
   }
 
   .style-nav {
+    width: 100%;
     justify-content: space-between;
   }
 
@@ -261,5 +266,47 @@ address {
   address {
     padding-left: 0;
     margin: 0 1.5%;
+  }
+}
+
+@media (max-width: 500px) {
+  .style-nav {
+  	display: flex;
+  	flex-direction: column;
+    width: 100%;
+  	padding: 20px;
+  }
+
+  .style-nav a {
+    display: block;
+    margin: 0 auto;
+    padding: 10px 0;
+    border: 1px solid lightgray;
+    text-align: center;
+    justify-content: center;
+  }
+
+  .welcome {
+    width: 100%;
+  }
+
+  .mid-content-wrapper {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .features, .about {
+    margin: 10px 0;
+    align-items: center;
+    width: 100%;
+  }
+
+  .bottom-content {
+    flex-direction: column;
+  }
+
+  .services, .product, .vision {
+    width: 100%;
+    align-items: center;
   }
 }
